/* 
  Localizable.strings
  Assignment1

  Created by Maya Lekova on 2/2/17.
  Copyright © 2017 Maya Lekova. All rights reserved.
*/

"mainScreen.searchBar.placeholder" = "Search";
"mainScreen.searchBar.cancel" = "Cancel";
"navigation.back" = "Back";

"MTMovie" = "Movie";
"MTSeries" = "Series";
"MTEpisode" = "Episode";
"MTAll" = "All";
