...
            </objects>
            <point key="canvasLocation" x="1860" y="83.208395802098963"/>
        </scene>
        <!--Movie Details-->
        <scene sceneID="ci8-pq-amk">
            <objects>
                <viewController title="Movie Details" id="aei-ae-ElU" customClass="DetailViewController" customModule="Assignment1" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="YcB-DX-j47"/>
                        <viewControllerLayoutGuide type="bottom" id="PXA-gD-EXL"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="PF6-FM-pRO">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
